--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
+  "name": "dockerized-test-portal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./static/src/input.css -o ./static/src/styles.css --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samarth4445/dockerized-test-portal.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/samarth4445/dockerized-test-portal/issues"
+  },
+  "homepage": "https://github.com/samarth4445/dockerized-test-portal#readme",
   "devDependencies": {
     "tailwindcss": "^3.4.1"
   }
